<resources>
    <string name="app_name">WGU Progress Tracker</string>
    <string name="term1">Term 1</string>
    <string name="term1Start">01/01/18</string>
    <string name="term1End">02/01/18</string>
    <string name="maximize">+</string>
    <string name="addTerm">Add Term</string>
    <string name="addCM">Add Course Mentor</string>
    <string name="editCM">Edit Course Mentor</string>
    <string name="courseMentors">Course Mentors</string>
    <string name="termDetails">Term Details</string>
    <string name="assessmentDetails">Assessment Details</string>
    <string name="shareNotes">Share Notes</string>
    <string name="goal">Goal</string>
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="addAssessment">Add Assessment</string>
    <string name="setAlarmCourse">Set Start/End Reminders</string>
    <string name="setAlarmAssessment">Set Goal Date Reminder</string>


    <string-array name="termStatus">
        <item>In-Progress</item>
        <item>Complete</item>
    </string-array>

    <string-array name="courseStatus">
        <item>In-Progress</item>
        <item>Complete</item>
        <item>Dropped</item>
        <item>Plan to Take</item>
    </string-array>

    <string-array name="assessmentType">
        <item>P</item>
        <item>O</item>
    </string-array>

</resources>
